# Unreal-Test2DPlatformer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Test2DPlatformer.code-workspace  Test2DPlatformer.uproject  Test2DPlatformer.workspace  Test2DPlatformerCodeCompletionFolders.txt  Test2DPlatformerCodeLitePreProcessor.txt
Config/: DefaultEditor.ini  DefaultEditorPerProjectUserSettings.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/AI/: BP_NavLinkProxy.uasset  BP_PlatformerNavLinkProxy.uasset  BTServiceFindPlayer.uasset  FollowBT.uasset  FollowBlackBoard.uasset  Follow_AI_BP.uasset  PatrolBT.uasset  PatrolBlackBoard.uasset  Patrol_AI_BP.uasset
Content/Animations/: BallIdle.uasset  EnemyIdle.uasset  HeroBlueIdle.uasset  HeroIdle.uasset
Content/Blueprints/: BP_LeaderboardActor.uasset  BP_MainMenuGM.uasset  BP_MainMenuPawn.uasset  BP_PlatformerGameMode.uasset  BP_WP_Marker.uasset  HideActor.uasset  Patrol_AI_BP.uasset
Content/Characters/Player/: BP_Hero.uasset
Content/Characters/Player/Textures/: idle.uasset  idle_Flipbook.uasset  idle_Sprite.uasset  nocape1.uasset  nocape2.uasset
Content/Characters/Player/Textures/FX_light/: FX_light0.uasset  FX_light1.uasset  FX_light10.uasset  FX_light11.uasset  FX_light12.uasset  FX_light13.uasset  FX_light14.uasset  FX_light15.uasset  FX_light16.uasset  FX_light17.uasset  FX_light18.uasset  FX_light19.uasset  FX_light2.uasset  FX_light20.uasset  FX_light21.uasset  FX_light22.uasset  FX_light23.uasset  FX_light24.uasset  FX_light25.uasset  FX_light26.uasset  FX_light27.uasset  FX_light28.uasset  FX_light29.uasset  FX_light3.uasset  FX_light30.uasset  FX_light31.uasset  FX_light32.uasset  FX_light33.uasset  FX_light34.uasset  FX_light35.uasset  FX_light4.uasset  FX_light5.uasset  FX_light6.uasset  FX_light7.uasset  FX_light8.uasset  FX_light9.uasset
Content/Characters/Player/Textures/FX_lighttodark/: FX_lighttodark0.uasset  FX_lighttodark1.uasset  FX_lighttodark10.uasset  FX_lighttodark11.uasset  FX_lighttodark12.uasset  FX_lighttodark13.uasset  FX_lighttodark14.uasset  FX_lighttodark15.uasset  FX_lighttodark16.uasset  FX_lighttodark17.uasset  FX_lighttodark18.uasset  FX_lighttodark19.uasset  FX_lighttodark2.uasset  FX_lighttodark20.uasset  FX_lighttodark21.uasset  FX_lighttodark22.uasset  FX_lighttodark23.uasset  FX_lighttodark24.uasset  FX_lighttodark25.uasset  FX_lighttodark26.uasset  FX_lighttodark27.uasset  FX_lighttodark28.uasset  FX_lighttodark29.uasset  FX_lighttodark3.uasset  FX_lighttodark30.uasset  FX_lighttodark31.uasset  FX_lighttodark32.uasset  FX_lighttodark33.uasset  FX_lighttodark34.uasset  (+7 more)
Content/Cinematics/Sequences/: RecordedSequence.uasset
Content/Feedback/: BP_CombatText.uasset  MAT_CombatText.uasset  WBP_CombatText.uasset
Content/HUD/: Menu.uasset  UI.uasset
Content/Input/: MobileTouchInterface.uasset
Content/Maps/: CollisionTest.umap  ForksAndPorks.umap  Level.umap  Level_BuiltData.uasset  Level_OLD.umap  Main.umap
Content/Materials/: BallSpriteMat.uasset  DotParticleMat.uasset  HeroSpriteMat.uasset  TestPhMat.uasset
Content/Particles/: BGEmitter.uasset  BallEmitter.uasset  GoalEmitter.uasset  PuffEmitter.uasset  RainEmitter.uasset
Content/Sprites/: BallSprite.uasset  EnemySprite.uasset  Fork.uasset  FriendSprite.uasset  HeroBlue.uasset  HeroSprite.uasset  HeroSpriteNoColl.uasset  HeroSpriteNoo.uasset  Pork.uasset  enemy.uasset  friend.uasset
Content/Textures/: circle.uasset  dot.uasset  enemy.uasset  friend.uasset  mainatlas.uasset  player.uasset  playerbase.uasset  temple-ruins.uasset  tileset.uasset  tileset2.uasset
Content/Tilemaps/: LevelTileMap.uasset  PorksTilemap.uasset
Content/Tilesets/: PorksTileset.uasset  WorldTileSet.uasset  temple-ruins_TileSet.uasset
Content/UI/: BP_ScoreRow.uasset  WBP_EnterName.uasset  WBP_LeaderboardEntry.uasset  WBP_MainMenu.uasset
Content/Weapons/: BP_Bullet.uasset
Docs/YCM/: .ycm_extra_conf.py
OriginalArt/Particles/: BlockExplo.pex  Downwell.pdproject  Muzzle.pex  puff.pex
OriginalArt/Sprites/: mainatlas.json  mainatlas.tps
OriginalArt/Tilemaps/: level1.tmx  tileset.psd
Plugins/Developer/RiderLink/: RiderLink.uplugin
Plugins/Developer/RiderLink/Resources/: checksum
Source/: Test2DPlatformer.Target.cs  Test2DPlatformerEditor.Target.cs
Source/Test2DPlatformer/: BTTask_PlatformerMoveTo.cpp  BTTask_PlatformerMoveTo.h  Ball.cpp  Ball.h  BasePawn.cpp  BasePawn.h  Bunny.cpp  Bunny.h  BunnyManager.cpp  BunnyManager.h  EnemyPawn.cpp  EnemyPawn.h  FAPPlayerController.cpp  FAPPlayerController.h  FollowerAIController.cpp  FollowerAIController.h  ForksAndPorksGameMode.cpp  ForksAndPorksGameMode.h  Goal.cpp  Goal.h  HeroPawn.cpp  HeroPawn.h  JumpingPathFollowingComponent.cpp  JumpingPathFollowingComponent.h  Mob.cpp  Mob.h  NavArea_Jump.cpp  NavArea_Jump.h  PixelPerfectCameraComponent.cpp  PixelPerfectCameraComponent.h  PlatformerCameraActor.cpp  PlatformerCameraActor.h  PlatformerGameState.cpp  PlatformerGameState.h  PlatformerGameViewportClient.cpp  PlatformerGameViewportClient.h  PlatformerPawnMovementComponent.cpp  PlatformerPawnMovementComponent.h  PlatformerPlayerState.cpp  PlatformerPlayerState.h  (+10 more)
Source/Test2DPlatformer/Feedback/: PopText.cpp  PopText.h  PopTextWidget.cpp  PopTextWidget.h
Source/Test2DPlatformer/Leaderboard/: LeaderboardActor.cpp  LeaderboardActor.h
Source/Test2DPlatformer/Navigation/: PlatformerNavLinkProxy.cpp  PlatformerNavLinkProxy.h
Source/Test2DPlatformer/Player/: FAPCameraComponent.cpp  FAPCameraComponent.h  FAPSpectatorPawn.cpp  FAPSpectatorPawn.h
Source/Test2DPlatformer/Weapon/: Bullet.cpp  Bullet.h
Test2DPlatformer (IOS).xcworkspace/: contents.xcworkspacedata
Test2DPlatformer (IOS).xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
Test2DPlatformer (Mac).xcworkspace/: contents.xcworkspacedata
Test2DPlatformer.xcworkspace/: contents.xcworkspacedata
Test2DPlatformer.xcworkspace/xcshareddata/: Test2DPlatformer.xcscmblueprint  WorkspaceSettings.xcsettings
Test2DPlatformer.xcworkspace/xcuserdata/tanis.xcuserdatad/: UserInterfaceState.xcuserstate
(+218 files in other folders)
